circuitbreaker/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: notification
spec:
 hosts:
 - notification-service
 http:
 - route:
   - destination:
      host: notification-service
      subset: default
